# machine-learning-monitoring-with-evidently

./: .gitignore  Makefile  README.md  evidently_capstone.ipynb  install_poetry.sh  pyproject.toml  requirements.txt
datasets/: supplier_raw_table.parquet  supplier_transformed_table.parquet
output/model/metrics/: random_forest_classifier_data_drift_snapshot.html  random_forest_classifier_data_drift_snapshot.json
output/model/tests/: random_forest_classifier_tests_snapshot.html  random_forest_classifier_tests_snapshot.json
soda/: check_function.py
soda/checks/staging/: transfom_check.yml
src/api/: app.py
src/data/: extract.py  load.py  main.py  transform.py
src/data/soda/: check_function.py
src/data/soda/checks/sources/: raw_check.yml
src/data/soda/checks/staging/: transfom_check.yml
src/flows/: etl_flow.py
src/models/: feature_engineering.py  model_flow.py  monitoring.py  predict_model.py  train_eval_model.py  train_model.py
src/models/utils/: global_variables.py
src/utils/: create_datasets.py
src/visualizations/: create_plot_task.py  visualizer.py
