[tool.poetry]
name = "machine-learning-monitoring-with-evidently"
version = "0.1.0"
description = "Classification of contracts in Profit or Non-profit"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
duckdb = "^0.9.2"
prefect = "^2.14.12"
mlflow = "^2.9.2"
evidently = "^0.4.13"
soda-core-duckdb = "^3.1.2"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.11"
click = "^8.1.7"
joblib = "^1.3.2"
tqdm = "^4.66.1"
streamlit = "^1.29.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
polars = "^0.20.3"
prefect-shell = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
